--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Hikotomo!</a></li>
+							<li><a href="#one">Badminton</a></li>
+							<li><a href="#two">Programming</a></li>
+							<li><a href="#three">Science</a></li>
+							<li><a href="#four">Organization</a></li>
 						</ul>
 					</nav>
 				</div>
