--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Hikotomo!</a></li>
-							<li><a href="#one">Badminton</a></li>
-							<li><a href="#two">Programming</a></li>
-							<li><a href="#three">Science</a></li>
+							<li><a href="#intro">What is Hikotomo?</a></li>
+							<li><a href="#one">About Me</a></li>
+							<li><a href="#two">Portfolio</a></li>
+							<li><a href="#three">Get in touch</a></li>
 							<li><a href="#four">Organization</a></li>
 						</ul>
 					</nav>
@@ -37,9 +37,12 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>What is Hikotomo?</h1>
+							<a href="#" class="image"><img src="images/brownHair.JPG" alt="" data-position="top center" width="300" height="300"/></a>
 							<p>Engineer</p>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<p>京都大学大学院人間環境学研究科<br />
+								相関環境学専攻
+							<br><br>
+							<a href="http://www.tomohiko9090.com/">未来のワクワクさん</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -52,34 +55,34 @@
 							<a href="#" class="image"><img src="images/blogheader.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>未来のワクワクさん</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Readme</h2>
+									<p>こちらでブログ更新してます。更新頻度は高くないです。</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic_1.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/Hikotomo!.PNG" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/toujinbo.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>いつものこのアイコンを使ってるよ</h2>
+									<h2></h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic_2.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/toujinbo.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/badmintomohiko.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>福井県出身!</h2>
+									<h2>Badminton</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic_3.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -166,7 +169,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">tomo.k9090@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
@@ -175,9 +178,9 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="https://twitter.com/K9090Tomo" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/tomohiko9090" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
