--- a/generic_2.html
+++ b/generic_2.html
@@ -35,9 +35,9 @@
 							<h1 class="major">A Generic Page</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p><a href="graduation_thesis.pdf" target="_blank">IXPE衛星によるブラックホール連星からのX線偏光解析手法の研究2020, 広島大学理学部物理科学科高エネルギー・可視赤外天文学研究室</a></p>
-							<p><a href="graduation_thesis_poster.pdf" target="_blank">ポスター</a></p>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p><a href="graduation_thesis_poster.pdf" target="_blank">ポスター
+
+
 							<p><a href="code_graph/C-company_Mention_Network_During_November_2021.html" target="_blank">C社 2021年11月のメンションネットワーク</a></p>
 							<p><a href="code_graph/M-company_Mention_Network_During_November_2020.html" target="_blank">M社 2020年11月のメンションネットワーク</a></p>
 							<p><a href="code_graph/C-company_Channel_Network.html" target="_blank">C社 チャネルネットワーク</a></p>
@@ -46,6 +46,10 @@
 							<p><a href="code_graph/M-company_Channel_Network.html" target="_blank">M社 チャネルネットワーク</a></p>
 							<p><a href="code_graph/M-company_Channel_Network_droped_nodes_have_one_edge.html" target="_blank">M社 チャネルネットワーク（リンク数が2未満のノードをカット）</a></p>
 							<p><a href="code_graph/M-company_Channel_Network_droped_nodes_have_under_40_edge.html" target="_blank">M社 チャネルネットワーク（リンク数が40未満のノードをカット）</a></p>
+
+							<p><a href="code_graph/C-company_User_Channel_Bipartite_Graph.html" target="_blank">C社 ユーザーとチャネルの2部グラフ</a></p>
+							<p><a href="code_graph/M-company_User_Channel_Bipartite_Graph.html" target="_blank">M社 ユーザーとチャネルの2部グラフ</a></p>
+
 						</div>
 					</section>
 
