--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
+	<link rel="icon" type="image/png" href="images/blogheader.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/blogheader.png">
+
 	<head>
 		<title>Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
