--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>What is Hikotomo?</h1>
-							<a href="#" class="image"><img src="images/brownHair.JPG" alt="" data-position="top center" width="300" height="300"/></a>
+							<a href="#" class="image"><img src="images/Hikotomo!.PNG" alt="" data-position="top center" width="300" height="300"/></a>
 							<p>Engineer</p>
 							<p>京都大学大学院人間環境学研究科<br />
 								相関環境学専攻
