--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<link rel="icon" type="image/png" href="images/blogheader.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/blogheader.png">
+	<link rel="icon" type="image/png" href="images/Hikotomo!.PNG">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/Hikotomo!.PNG">
 
 	<head>
 		<title>Hyperspace by HTML5 UP</title>
