--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="images/Hikotomo!.PNG">
 
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>未来のワクワクさんHP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
