--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2>Readme</h2>
 									<p>こちらでブログ更新してます。更新頻度は高くないです。</p>
 									<ul class="actions">
-										<li><a href="generic_1.html" class="button">Learn more</a></li>
+										<li><a href="http://www.tomohiko9090.com/" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
