--- a/generic_3.html
+++ b/generic_3.html
@@ -33,7 +33,7 @@
 						<div class="inner">
 							<h1 class="major">JavaSqript作品ページ</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p><a href="javasqript_practice/0_droid" target="_blank">0.ドロイドくん</a></p>
+							<p><a href="javasqript_practice/0_droid/droid.html" target="_blank">0.ドロイドくん</a></p>
 							<p><a href="javasqript_practice/1_calculator.html" target="_blank">1.Web電卓</a></p>
 							<p><a href="javasqript_practice/2_circle.html" target="_blank">2.円のサイズ変更</a></p>
 							<p><a href="javasqript_practice/3_nabeatsu.html" target="_blank">3.背景色変更</a></p>
