--- a/generic_3.html
+++ b/generic_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>JavaSqript作品ページ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">JavaSqript作品ページ</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/java-script.jpeg" alt="" /></span>
 							<p><a href="javasqript_practice/0_droid/droid.html" target="_blank">0.ドロイドくん</a></p>
 							<p><a href="javasqript_practice/1_calculator.html" target="_blank">1.Web電卓</a></p>
 							<p><a href="javasqript_practice/2_circle.html" target="_blank">2.円のサイズ変更</a></p>
