--- a/generic_3.html
+++ b/generic_3.html
@@ -38,6 +38,10 @@
 							<p><a href="javasqript_practice/2_circle.html" target="_blank">2.円のサイズ変更</a></p>
 							<p><a href="javasqript_practice/3_nabeatsu.html" target="_blank">3.世界のナベアツ</a></p>
 							<p><a href="javasqript_practice/4_colorChange.html" target="_blank">4.背景色変更</a></p>
+							<p><a href="javasqript_practice/5_create_box.html" target="_blank">5.箱（パート1）</a></p>
+							<p><a href="javasqript_practice/6_create_box.html" target="_blank">6.箱（パート2）</a></p>
+							<p><a href="javasqript_practice/7_rock_paper_scissors.html" target="_blank">7.じゃんけんbot</a></p>
+							<p><a href="javasqript_practice/8_tintiro.html" target="_blank">8.チンチロリン</a></p>
 						</div>
 					</section>
 
