--- a/javascript_practice/94_mini_blog.html
+++ b/javascript_practice/94_mini_blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>掲示板</title>
+  <title>けいじばん</title>
   <link rel="stylesheet" href="94_mini_blog.css">
 </head>
 <body>
