--- a/generic_3.html
+++ b/generic_3.html
@@ -42,9 +42,13 @@
 							<p><a href="javascript_practice/6_create_box.html" target="_blank">6.箱（パート2）</a></p>
 							<p><a href="javascript_practice/7_rock_paper_scissors.html" target="_blank">7.じゃんけんbot</a></p>
 							<p><a href="javascript_practice/8_tintiro.html" target="_blank">8.チンチロリン</a></p>
+							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank">9.かくれんぼ</a></p>
+							<p><a href="javascript_practice/91_money.html" target="_blank">10.コイン計算</a></p>
+							<p><a href="javascript_practice/92_money_extra.html" target="_blank">11.コイン計算(Extra)</a></p>
+							<p><a href="javascript_practice/93_photo_gallery.html" target="_blank">12.フォトギャラリー</a></p>
+							<p><a href="javascript_practice/94_mini_blog.html" target="_blank">13.ゆるゆる掲示板</a></p>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
