--- a/generic_3.html
+++ b/generic_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>JavaSqript作品ページ</title>
+		<title>JavaScript作品ページ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
