--- a/generic_3.html
+++ b/generic_3.html
@@ -33,33 +33,33 @@
 						<div class="inner">
 							<h1 class="major">JavaSqript作品ページ</h1>
 							<span class="image fit"><img src="images/java-script.jpeg" alt="" /></span>
-							<p><a href="javascript_practice/0_droid/droid.html" target="_blank">0.ドロイドくん</a></p>
+							<p><a href="javascript_practice/0_droid/droid.html" target="_blank"><h3>0.ドロイドくん</h3></a></p>
 							<p>　　　難易度: ★★</p>
-							<p><a href="javascript_practice/1_calculator.html" target="_blank">1.Web電卓</a></p>
+							<p><a href="javascript_practice/1_calculator.html" target="_blank"><h3>1.Web電卓</h3></a></p>
 							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/2_circle.html" target="_blank">2.円のサイズ変更</a></p>
+							<p><a href="javascript_practice/2_circle.html" target="_blank"><h3>2.円のサイズ変更</h3></a></p>
 							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/3_nabeatsu.html" target="_blank">3.世界のナベアツ</a></p>
+							<p><a href="javascript_practice/3_nabeatsu.html" target="_blank"><h3>3.世界のナベアツ</h3></a></p>
 							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/4_colorChange.html" target="_blank">4.背景色変更</a></p>
+							<p><a href="javascript_practice/4_colorChange.html" target="_blank"><h3>4.背景色変更</h3></a></p>
 							<p>　　　難易度: ★</p>
-							<p><a href="javascript_practice/5_create_box.html" target="_blank">5.箱（パート1）</a></p>
+							<p><a href="javascript_practice/5_create_box.html" target="_blank"><h3>5.箱（パート1）</h3></a></p>
 							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/6_create_box.html" target="_blank">6.箱（パート2）</a></p>
+							<p><a href="javascript_practice/6_create_box.html" target="_blank"><h3>6.箱（パート2）</h3></a></p>
 							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/7_rock_paper_scissors.html" target="_blank">7.じゃんけんbot</a></p>
+							<p><a href="javascript_practice/7_rock_paper_scissors.html" target="_blank"><h3>7.じゃんけんbot</h3></a></p>
 							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/8_tintiro.html" target="_blank">8.チンチロリン</a></p>
+							<p><a href="javascript_practice/8_tintiro.html" target="_blank"><h3>8.チンチロリン</h3></a></p>
 							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank">9.かくれんぼ</a></p>
+							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank"><h3>9.かくれんぼ</v></a></p>
 							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/91_money.html" target="_blank">10.コイン計算</a></p>
+							<p><a href="javascript_practice/91_money.html" target="_blank"><h3>10.コイン計算</h3></a></p>
 							<p>　　　難易度: ★</p>
-							<p><a href="javascript_practice/92_money_extra.html" target="_blank">11.コイン計算(Extra)</a></p>
+							<p><a href="javascript_practice/92_money_extra.html" target="_blank"><h3>11.コイン計算(Extra)</h3></a></p>
 							<p>　　　難易度: ★</p>
-							<p><a href="javascript_practice/93_photo_gallery.html" target="_blank">12.フォトギャラリー</a></p>
+							<p><a href="javascript_practice/93_photo_gallery.html" target="_blank"><h3>12.フォトギャラリー</v></a></p>
 							<p>　　　難易度: ★★</p>
-							<p><a href="javascript_practice/94_mini_blog.html" target="_blank">13.ゆるゆる掲示板</a></p>
+							<p><a href="javascript_practice/94_mini_blog.html" target="_blank"><h3>13.ゆるゆる掲示板</h3></a></p>
 							<p>　　　難易度: ★★★★★</p>
 						</div>
 					</section>
