--- a/generic_3.html
+++ b/generic_3.html
@@ -51,13 +51,13 @@
 							<p>　　　難易度: ★★★</p>
 							<p><a href="javascript_practice/8_tintiro.html" target="_blank"><h3>8.チンチロリン</h3></a></p>
 							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank"><h3>9.かくれんぼ</v></a></p>
+							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank"><h3>9.かくれんぼ</3h></a></p>
 							<p>　　　難易度: ★★★</p>
 							<p><a href="javascript_practice/91_money.html" target="_blank"><h3>10.コイン計算</h3></a></p>
 							<p>　　　難易度: ★</p>
 							<p><a href="javascript_practice/92_money_extra.html" target="_blank"><h3>11.コイン計算(Extra)</h3></a></p>
 							<p>　　　難易度: ★</p>
-							<p><a href="javascript_practice/93_photo_gallery.html" target="_blank"><h3>12.フォトギャラリー</v></a></p>
+							<p><a href="javascript_practice/93_photo_gallery.html" target="_blank"><h3>12.フォトギャラリー</h3></a></p>
 							<p>　　　難易度: ★★</p>
 							<p><a href="javascript_practice/94_mini_blog.html" target="_blank"><h3>13.ゆるゆる掲示板</h3></a></p>
 							<p>　　　難易度: ★★★★★</p>
