--- a/generic_3.html
+++ b/generic_3.html
@@ -51,7 +51,7 @@
 							<p>　　　難易度: ★★★</p>
 							<p><a href="javascript_practice/8_tintiro.html" target="_blank"><h3>8.チンチロリン</h3></a></p>
 							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank"><h3>9.かくれんぼ</3h></a></p>
+							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank"><h3>9.かくれんぼ</h3></a></p>
 							<p>　　　難易度: ★★★</p>
 							<p><a href="javascript_practice/91_money.html" target="_blank"><h3>10.コイン計算</h3></a></p>
 							<p>　　　難易度: ★</p>
