--- a/generic_3.html
+++ b/generic_3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <!--
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
@@ -31,48 +31,80 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">JavaSqript作品ページ</h1>
+							<h1 class="major">JavaScript作品ページ</h1>
 							<span class="image fit"><img src="images/java-script.jpeg" alt="" /></span>
-							<p><a href="javascript_practice/0_droid/droid.html" target="_blank"><h3>0.ドロイドくん</h3></a></p>
-							<p>　　　難易度: ★★</p>
-							<p><a href="javascript_practice/1_calculator.html" target="_blank"><h3>1.Web電卓</h3></a></p>
-							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/2_circle.html" target="_blank"><h3>2.円のサイズ変更</h3></a></p>
-							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/3_nabeatsu.html" target="_blank"><h3>3.世界のナベアツ</h3></a></p>
-							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/4_colorChange.html" target="_blank"><h3>4.背景色変更</h3></a></p>
-							<p>　　　難易度: ★</p>
-							<p><a href="javascript_practice/5_create_box.html" target="_blank"><h3>5.箱（パート1）</h3></a></p>
-							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/6_create_box.html" target="_blank"><h3>6.箱（パート2）</h3></a></p>
-							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/7_rock_paper_scissors.html" target="_blank"><h3>7.じゃんけんbot</h3></a></p>
-							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/8_tintiro.html" target="_blank"><h3>8.チンチロリン</h3></a></p>
-							<p>　　　難易度: ★★★★</p>
-							<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank"><h3>9.かくれんぼ</h3></a></p>
-							<p>　　　難易度: ★★★</p>
-							<p><a href="javascript_practice/91_money.html" target="_blank"><h3>10.コイン計算</h3></a></p>
-							<p>　　　難易度: ★</p>
-							<p><a href="javascript_practice/92_money_extra.html" target="_blank"><h3>11.コイン計算(Extra)</h3></a></p>
-							<p>　　　難易度: ★</p>
-							<p><a href="javascript_practice/93_photo_gallery.html" target="_blank"><h3>12.フォトギャラリー</h3></a></p>
-							<p>　　　難易度: ★★</p>
-							<p><a href="javascript_practice/94_mini_blog.html" target="_blank"><h3>13.ゆるゆる掲示板</h3></a></p>
-							<p>　　　難易度: ★★★★★</p>
+							<div class="main">
+								<div class="contentA">
+									<div><h2>【 JavaScript演習課題 】</h2></div>
+									<p><a href="javascript_practice/0_droid/droid.html" target="_blank"><h3>0. ドロイドくん</h3></a></p>
+									<p>　　　難易度: ★★</p>
+									<p><a href="javascript_practice/1_calculator.html" target="_blank"><h3>1. Web電卓</h3></a></p>
+									<p>　　　難易度: ★★★</p>
+									<p><a href="javascript_practice/2_circle.html" target="_blank"><h3>2. 円のサイズ変更</h3></a></p>
+									<p>　　　難易度: ★★★★</p>
+									<p><a href="javascript_practice/3_nabeatsu.html" target="_blank"><h3>3. 世界のナベアツ</h3></a></p>
+									<p>　　　難易度: ★★★</p>
+									<p><a href="javascript_practice/4_colorChange.html" target="_blank"><h3>4. 背景色変更</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_practice/5_create_box.html" target="_blank"><h3>5. 箱（パート1）</h3></a></p>
+									<p>　　　難易度: ★★★★</p>
+									<p><a href="javascript_practice/6_create_box.html" target="_blank"><h3>6. 箱（パート2）</h3></a></p>
+									<p>　　　難易度: ★★★★</p>
+									<p><a href="javascript_practice/7_rock_paper_scissors.html" target="_blank"><h3>7. じゃんけんbot</h3></a></p>
+									<p>　　　難易度: ★★★</p>
+									<p><a href="javascript_practice/8_tintiro.html" target="_blank"><h3>8. チンチロリン</h3></a></p>
+									<p>　　　難易度: ★★★★</p>
+									<p><a href="javascript_practice/9_hide_and_seek.html" target="_blank"><h3>9. かくれんぼ</h3></a></p>
+									<p>　　　難易度: ★★★</p>
+									<p><a href="javascript_practice/91_money.html" target="_blank"><h3>10. コイン計算</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_practice/92_money_extra.html" target="_blank"><h3>11. コイン計算(Extra)</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_practice/93_photo_gallery.html" target="_blank"><h3>12. フォトギャラリー</h3></a></p>
+									<p>　　　難易度: ★★</p>
+									<p><a href="javascript_practice/94_mini_blog.html" target="_blank"><h3>13. ゆるゆる掲示板</h3></a></p>
+									<p>　　　難易度: ★★★★★</p>
+								</div>
+								<div class="contentB">
+									<div><h2>【 アルゴリズム練習 】</h2></div>
+									<p><a href="javascript_algorithm/0_template.html" target="_blank"><h3>0. 雛形</h3></a></p>
+									<p>　　　難易度: </p>
+									<p><a href="javascript_algorithm/1_steps.html" target="_blank"><h3>1. 階段</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/2_horizontal.html" target="_blank"><h3>2. 横線</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/3_vertical.html" target="_blank"><h3>3. 縦線</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/4_border.html" target="_blank"><h3>4. 外枠</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/5_x.html" target="_blank"><h3>5. エックス</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/6_z.html" target="_blank"><h3>6. ゼット</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/7_even_odd.html" target="_blank"><h3>7. 交互</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/8_diagonal.html" target="_blank"><h3>8. 斜線</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/9_mabara.html" target="_blank"><h3>9. まばら</h3></a></p>
+									<p>　　　難易度: ★</p>
+									<p><a href="javascript_algorithm/91_diamond.html" target="_blank"><h3>10. ひし形</h3></a></p>
+									<p>　　　難易度: ★★★★</p>
+									<p><a href="javascript_algorithm/92_hourglass.html" target="_blank"><h3>11. 砂時計</h3></a></p>
+									<p>　　　難易度: ★★★</p>
+								</div>
+							</div>
 						</div>
 					</section>
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+			<!-- <footer id="footer" class="wrapper alt"> -->
+				<!-- <div class="inner"> -->
+					<!-- <ul class="menu"> -->
+						<!-- <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+					<!-- </ul> -->
+				<!-- </div> -->
+			<!-- </footer> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -84,4 +116,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+</html> -->
