--- a/generic_3.html
+++ b/generic_3.html
@@ -62,7 +62,7 @@
 									<p>　　　実装難易度: ★</p>
 									<p><a href="javascript_practice/93_photo_gallery.html" target="_blank"><h3>12. フォトギャラリー</h3></a></p>
 									<p>　　　実装難易度: ★★</p>
-									<p><a href="javascript_practice/94_mini_blog.html" target="_blank"><h3>13. ゆるゆる掲示板</h3></a></p>
+									<p><a href="javascript_practice/94_mini_blog.html" target="_blank"><h3>13. ゆるゆるたすく帳</h3></a></p>
 									<p>　　　実装難易度: ★★★★★</p>
 								</div>
 								<div class="contentB">
