--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<a href="#" class="image"><img src="images/badmintomohiko.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>JavaSqript作品ページ</h2>
+									<h2>JavaScript作品ページ</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic_3.html" class="button">Learn more</a></li>
