--- a/generic_2.html
+++ b/generic_2.html
@@ -34,7 +34,7 @@
 						<div class="inner">
 							<h1 class="major">A Generic Page</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p><a href="graduation_thesis.pdf" target="_blank">IXPE衛星によるブラックホール連星からのX線偏光解析手法の研究2020, 広島大学理学部物理科学科高エネルギー・可視赤外天文学研究室</a></p>
+							<p><a href="graduation_thesis.pdf" target="_blank">IXPE衛星によるブラックホール連星からのX線偏光解析手法の研究</a></p>
 							<p><a href="graduation_thesis_poster.pdf" target="_blank">卒論ポスター
 							<p><a href="graduation_thesisの20220212.pdf" target="_blank">ビジネスチャットを用いた企業組織における信頼とネットワークの研究
 							<p><a href="修論発表_Ver5.0_.pdf" target="_blank">修論スライド
